# SandSim

./: .gitmodules  CMakeLists.txt  notes.txt
shaders/: grid.glsl  square.glsl
src/: CMakeLists.txt  main.c
